src/parser_interned/snapshots/simp__parser_interned__tests__tests__inputs__valid__stmt_fn_nested_fn.snap
---
source: src/parser_interned/tests.rs
expression: parse(&input)
---
StmtFn {
    name: IdentId {
        raw: 1,
    },
    params: [],
    body: Block {
        body: [
            StmtFn {
                name: IdentId {
                    raw: 2,
                },
                params: [],
                body: Block {
                    body: [],
                    tail: None,
                },
            },
        ],
        tail: None,
    },
}
